# car

./: pyproject.toml  remove_secret.py  test_surya_fix.py  test_surya_v2.py  update_notebook.py  update_notebook_v2.py
scripts/lib/: check.py
scripts/notebooks/: main.ipynb
src/: fix_notebook_v2.py  main.py
src/lib/: check.py
src/notebooks/: main.ipynb
